--- a/views/main.scss
+++ b/views/main.scss
@@ -1,4 +1,5 @@
 @import 'mixins';
+@import 'fonts';
 
 /*
 SASS can name breakpoints for media queries!!
@@ -9,17 +10,25 @@ SASS can name breakpoints for media queries!!
 $header-height: 50px;
 $page-top-padding: 40px;
 
+$content-max-width: 850px;
+
 // Colors
 
 $nothingness: #232428;
 $text-color: #6D665C;
+$selection-col: #d2f3e2;
 
 body {
   background-color: $nothingness;
-  font-family: 'Raleway', sans-serif;
+  font-family: "BrandonGrotesque", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+::selection {
+  background: $selection-col;
 }
 
 #page-outer {
+  // TODO, maybe remove padding for all so its flush
   padding-bottom: 40px;
   padding-top: $page-top-padding;
 
@@ -28,6 +37,40 @@ body {
   // padding-right: 4%;
   padding-left: 40px;
   padding-right: 40px;
+}
+
+// Sync padding and other props with #page-outer!
+footer {
+  padding-left: 40px;
+  padding-right: 40px;
+  color: #ddd;
+  margin: 0 auto;
+  font-weight: 100;
+  font-size: 2rem;
+  margin-bottom: 40px;
+  position: relative;
+
+  .wrapper {
+    padding-left: 80px;
+    padding-right: 80px;
+    margin: 0 auto;
+    overflow: auto;
+
+    a {
+      color: #ddd;
+      border-bottom: 1px solid;
+      text-decoration: none;
+    }
+
+    .copyleft {
+      float: left;
+      overflow: auto;
+    }
+    .latest-commit {
+      float: right;
+      overflow: auto;
+    }
+  }
 }
 
 #page {
@@ -68,14 +111,14 @@ body {
         display: inline;
         color: white;
         font-weight: 700;
-        font-size: 3.5rem;
+        font-size: 4rem;
       }
 
       h2 {
         display: inline;
         color: white;
         font-weight: 300;
-        font-size: 3.5rem;
+        font-size: 4rem;
       }
     }
   }
@@ -108,7 +151,7 @@ body {
           border-bottom: none;
           color: white;
           font-weight: 300;
-          font-size: 1.75rem;
+          font-size: 2rem;
           padding-bottom: 3px;
           @include transition(all .2s ease-in-out);
 
@@ -118,7 +161,7 @@ body {
 
           &.blur {
             color: transparent;
-            text-shadow: 0 0 4px rgba(255,255,255,1);
+            text-shadow: 0 0 10px rgba(255,255,255,1);
           }
         }
       }
@@ -129,7 +172,12 @@ body {
 // Masthead
 
 #masthead {
-  height: 800px;
+  height: 85vh;
+  max-height: 1300px;
+}
+
+.home-parallax-img {
+  background: url(/img/parallax1.jpg);
 }
 
 .masthead-home-tagline {
@@ -142,7 +190,7 @@ body {
   & > div {
     position: relative;
     width: 100%;
-    max-width: 850px;
+    max-width: $content-max-width;
     margin: 0 auto;
     top: 50%;
     @include transform(translateY(-50%));
@@ -154,11 +202,25 @@ body {
     & > h3 {
       // font-size: 3rem;
       // margin-bottom: 0;
+      -webkit-font-smoothing: subpixel-antialiased;
+      text-transform: lowercase;
+
+      span.paren {
+        position: absolute;
+        margin-top: .1em;
+      }
+    }
+
+    h1 {
+      strong {
+        font-weight: 400;
+      }
     }
   }
 }
 
 .darken-filter {
+  // background-color: rgb(41, 136, 196);
   background-color: $nothingness;
   opacity: 0.5;
   width: 100%;
@@ -198,6 +260,17 @@ body {
   animation:        bounce-fade 2s infinite; /* IE 10+ */
 }
 
+// Home content
+
+.parallax2 {
+  height: 500px;
+}
+
+.parallax2-img {
+  background: url(/img/parallax1.jpg);
+  height: 1000px !important;
+}
+
 // Parallax
 
 .parallax-wrap {
@@ -208,10 +281,10 @@ body {
 
 .parallax-img {
   // Should this be 100%?
+  // TODO: override this if the image is closer to the bottom of the page.
   height: 110%;
   width: 100%;
   overflow: hidden;
-  background: url(/img/parallax1.jpg);
   background-repeat: no-repeat;
   background-position: center 0;
   background-size: cover;
@@ -228,4 +301,231 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+// Content
+
+#content-wrap {
+  background-color: white;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+@mixin do_max_width() {
+  width: 90%;
+  max-width: $content-max-width;
+}
+
+.body-text {
+  @include do_max_width();
+  margin: 0 auto;
+
+  h1, h2, h3 {
+    // font-weight: 400;
+    font-weight: 700;
+    color: #4c4c4c;
+  }
+
+  p {
+    font-size: 2.3rem;
+    font-weight: 300;
+    line-height: 3.7rem;
+    color: #666;
+  }
+}
+
+// Timeline
+
+$timeline_line_col: #bbedd4;
+$timeline_time_top_col: #bdd0db;
+$timeline_time_bot_col: #78dba9;
+$timeline_label_background_col: #78dba9;
+$timeline_label_background_col_even: #8ce0b6;
+$timeline_waypoint_col: #78dba9;
+
+$timeline_collapse_width: 46em;
+
+$timeline_extend_up: 5rem;
+
+
+@media screen and (max-width: $timeline_collapse_width) {
+  ul.timeline {
+    margin: 0 auto !important;
+    &:before {
+      display: none;
+    }
+    time {
+      width: 100% !important;
+      position: relative !important;
+      padding: 0 0 20px 0 !important;
+      span {
+        text-align: left !important;
+      }
+    }
+    li {
+      &:nth-child(even) {
+        div.label::after {
+          border-bottom-color: $timeline_label_background_col_even !important;
+        }
+      }
+      div.label {
+        margin: 0 0 30px 0 !important;
+        padding: 1em !important;
+        font-size: 85% !important;
+        &:after {
+          right: auto !important;
+          left: 20px !important;
+          border-right-color: transparent !important;
+          border-bottom-color: $timeline_label_background_col !important;
+          top: -20px !important;
+        }
+      }
+      div.waypoint {
+        position: relative !important;
+        float: right !important;
+        left: auto !important;
+        margin: -55px 5px 0 0 !important;
+      }
+    }
+  }
+}
+
+.timeline-wrap {
+  @include do_max_width();
+  margin: 0 auto;
+  margin-bottom: 3rem;
+}
+
+ul.timeline {
+  padding: 0;
+  margin: 0;
+  // 2.5rem is the <p> margin-bottom
+  margin-top: $timeline_extend_up + 2.5rem;
+  list-style: none;
+  position: relative;
+  // Line
+  &:before {
+    content: "";
+    position: absolute;
+    top: -$timeline_extend_up;
+    bottom: 0;
+    width: 10px;
+    background: $timeline_line_col;
+    left: 20%;
+    margin-left: -10px;
+    @include border-radius(5px);
+  }
+  li {
+    position: relative;
+    margin-bottom: 25px;
+
+    &:nth-child(even) {
+      // time > span:last-child {
+      //   color: $timeline_label_background_col_even;
+      // }
+      div.label {
+        background-color: $timeline_label_background_col_even;
+        &:after {
+          border-right-color: $timeline_label_background_col_even;
+        }
+      }
+    }
+    time {
+      display: block;
+      width: 25%;
+      position: absolute;
+      span {
+        display: block;
+        padding-right: 90px;
+        text-align: right;
+        &:first-child {
+          font-size: 0.9em;
+          color: $timeline_time_top_col;
+        }
+        &:last-child {
+          font-weight: 400;
+          font-size: 1.4em;
+          @media screen and (max-width: $content-max-width) {
+            font-size: 1em;
+          }
+          color: $timeline_time_bot_col;
+        }
+      }
+    }
+    div.label {
+      margin: 0 0 15px 25%;
+      background: $timeline_label_background_col;
+      color: #fff;
+      padding: 1em;
+      font-size: 1em;
+      font-weight: 300;
+      line-height: 1.4;
+      position: relative;
+      border-radius: 5px;
+
+      & > h1, & > h2, & > h3 {
+        color: white !important;
+      }
+      a {
+        text-decoration: none;
+        color: #fff;
+        border-bottom: 1px solid;
+        font-weight: 300;
+        &:hover {
+          color: #eee;
+        }
+      }
+      h2 {
+        font-weight: 300;
+        margin: 0;
+        padding: 0;
+        font-size: 2.3rem;
+        line-height: 3rem;
+      }
+      p {
+        margin-bottom: 0px;
+        font-size: 1.9rem;
+      }
+      span.more {
+        display: inline-block;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        margin-top: 10px;
+        padding-top: 10px;
+        border-top: 1px solid rgba(255, 255, 255, 0.4);
+      }
+      &:after {
+        right: 100%;
+        border: solid transparent;
+        content: " ";
+        height: 0;
+        width: 0;
+        position: absolute;
+        pointer-events: none;
+        border-right-color: $timeline_label_background_col;
+        border-width: 10px;
+        top: 10px;
+      }
+    }
+    div.waypoint {
+      width: 40px;
+      height: 40px;
+      line-height: 40px;
+      position: absolute;
+      color: #fff;
+      background: $timeline_waypoint_col;
+      border-radius: 50%;
+      box-shadow: 0 0 0 8px $timeline_line_col;
+      text-align: center;
+      left: 20%;
+      top: 0;
+      margin: 0 0 0 -25px;
+
+      &:before {
+        content: "\2191";
+        font-size: 2.5rem;
+      }
+    }
+  }
 }
