--- a/views/mixins.scss
+++ b/views/mixins.scss
@@ -39,3 +39,10 @@
   -o-transition: $args;
   transition: $args;
 }
+
+@mixin border-radius($radius) {
+  -webkit-border-radius: $radius;
+     -moz-border-radius: $radius;
+      -ms-border-radius: $radius;
+          border-radius: $radius;
+}
