Fix retarded CPU usage bug
for some reason, the scroll notifier css animation jacks up the cpu usage to 60% constant. Even when the page is just freaking sitting there. kill me now. i hate css

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -18,9 +18,7 @@
 		<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css">
 		<link href="/main.css" rel="stylesheet" type="text/css"/>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" defer></script>
-		<script src="/js/jquery.mobiledetect.js" defer></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" defer></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.form/3.45/jquery.form.min.js" defer></script>
 		<script src="/js/main.js" defer></script>
 	    <script type="text/javascript">
 var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-4253037-6"]),_gaq.push(["_setDomainName","stanleycen.com"]),_gaq.push(["_trackPageview"]),function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src=("https:"==document.location.protocol?"https://ssl":"http://www")+".google-analytics.com/ga.js";var e=document.getElementsByTagName("script")[0];e.parentNode.insertBefore(t,e)}();var _paq=_paq||[];_paq.push(["trackPageView"]),_paq.push(["enableLinkTracking"]),function(){var e="http://lake.stanleycen.com/";_paq.push(["setTrackerUrl",e+"piwik.php"]),_paq.push(["setSiteId",1]);var a=document,p=a.createElement("script"),t=a.getElementsByTagName("script")[0];p.type="text/javascript",p.async=!0,p.defer=!0,p.src=e+"piwik.js",t.parentNode.insertBefore(p,t)}();window.heap=window.heap||[],heap.load=function(t,e){window.heap.appid=t,window.heap.config=e;var a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=("https:"===document.location.protocol?"https:":"http:")+"//cdn.heapanalytics.com/js/heap.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(a,n);for(var o=function(t){return function(){heap.push([t].concat(Array.prototype.slice.call(arguments,0)))}},p=["identify","track"],c=0;c<p.length;c++)heap[p[c]]=o(p[c])}; heap.load("3908329247");
@@ -54,8 +52,8 @@ var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-4253037-6"]),_gaq.push(["_setDoma
 									<h1 class="animated slideInDown">I'm <strong>Stanley</strong>, a freshman@mit, intern@dropbox, and builder of things.</h1>
 								</div>
 							</div>
-							<div id="scroll-notifier">
-							</div>
+			<!-- 				<div id="scroll-notifier">
+							</div> -->
 						</div>
 					</div>
 				</section>
@@ -178,31 +176,15 @@ var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-4253037-6"]),_gaq.push(["_setDoma
 					</div>
 					<div class="body-text">
 						<p>Like what you see? I'm always looking for <strong>awesome &amp; fun</strong> opportunities. I'd love to hear from
-						you! Hit me up <a href="<%= @nav == 'home' ? '#contact' : '/#contact'%>">here</a>. If you're looking for cool side projects, keep scrolling&hellip;
+						you! Hit me up <a href="<%= @nav == 'home' ? '#contact' : '/#contact'%>">here</a>.
 						</p>
 					</div>
 				</section>
-<!-- 				<section class="parallax2">
-					<div class="parallax-wrap">
-						<div class="parallax-img parallax2-img"><div class="darken-filter"></div></div>
-						<div class="parallax-content">
-							<h1>I make dank software using monads.</h1>
-						</div>
-					</div>
-				</section> -->
-				<section id="content-wrap" style="height: 1000px">
+				<section id="content-wrap">
 					<div class="body-text">
 						<p>10 years of hacking and pixel pushing...</p>
 					</div>
 				</section>
-<!-- 				<section class="parallax2">
-					<div class="parallax-wrap">
-						<div class="parallax-img parallax2-img"><div class="darken-filter"></div></div>
-						<div class="parallax-content">
-							<h1>I make dank software using monads.</h1>
-						</div>
-					</div>
-				</section> -->
 			</div>
 		</div>
 		<footer>
