move stuff to index

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -57,134 +57,7 @@ var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-4253037-6"]),_gaq.push(["_setDoma
 						</div>
 					</div>
 				</section>
-				<section id="content-wrap">
-					<div class="body-text">
-						<h1>Who am I?</h1>
-						<p>I'm a freshman at MIT, and I'm passionate about computer science. I've spent the better part of my life (10+ years and counting!)
-							programming, and I don't plan on slowing down anytime soon.</p>
-
-						<p>I've explored and learned a whole lot since then. Game hacking, mobile dev, algorithms, reverse engineering, computer vision, web dev, robotics, machine learning&hellip; if you can name it,
-						 I've probably (at least) dabbled in it.</p>
-
-						 <p>For your enjoyment, here's a (reverse) timeline of selected milestones in my life as a software engineer:</p>
-					</div>
-					<div class="timeline-wrap">
-						<ul class="timeline">
-							<li>
-								<time>
-									<span>
-										Freshman Year
-									</span>
-									<span>
-										Summer '15
-									</span>
-								</time>
-								<div class="waypoint"></div>
-								<div class="label">
-									<h2>Dropbox &mdash; Software Engineering Internship</h2>
-									<span class="more">
-										<p>I worked on Dropbox's new contacts infrastructure containing billions of contacts. Improved aggregation, search quality, and relevance.</p>
-									</span>
-								</div>
-							</li>
-							<li>
-								<time>
-									<span>
-										Freshman Year
-									</span>
-									<span>
-										January '15
-									</span>
-								</time>
-								<div class="waypoint"></div>
-								<div class="label">
-									<h2>NASDAQ &mdash; Data Science Externship</h2>
-									<span class="more">
-										<p>A team 4 fellow MIT students and I built, tested, and pipelined a statistical model using R and Python to predict customer cancellations.</p>
-									</span>
-								</div>
-							</li>
-							<li>
-								<time>
-									<span>
-										High School
-									</span>
-									<span>
-										2010 &ndash; 2014
-									</span>
-								</time>
-								<div class="waypoint"></div>
-								<div class="label">
-									<h2>Competitive programming</h2>
-									<span class="more">
-										<p>I was a <a href="http://usaco.org/">USA Computing Olympiad</a> finalist in <a href="http://usaco.org/index.php?page=finalists12">2012</a> and <a href="http://usaco.org/index.php?page=finalists13">2013</a>. Lots and lots of algorithms.</p>
-									</span>
-								</div>
-							</li>
-							<li>
-								<time>
-									<span>
-										High School
-									</span>
-									<span>
-										2013
-									</span>
-								</time>
-								<div class="waypoint"></div>
-								<div class="label">
-									<h2>MIT CSAIL &mdash; Research</h2>
-									<span class="more">
-										<p>Conducted research on visualization strategies in collaborative temporal planning through the prestigious <a href="http://www.cee.org/news/research-science-institute-mit-hosts-81-high-school-students">Research Science Institute</a> program at the MIT Computer Science and Artificial Intelligence Laboratory.</p>
-									</span>
-								</div>
-							</li>
-							<li>
-								<time>
-									<span>
-										Life
-									</span>
-									<span>
-										2005 &ndash; now
-									</span>
-								</time>
-								<div class="waypoint"></div>
-								<div class="label">
-									<h2>Learning, hacking, building, and more learning</h2>
-									<span class="more">
-										<p>Must. Learn. Everything. 100+ random side projects.</p>
-									</span>
-								</div>
-							</li>
-							<li>
-								<time>
-									<span>
-										3<sup>rd</sup> grade
-									</span>
-									<span>
-										Mar '05
-									</span>
-								</time>
-								<div class="waypoint"></div>
-								<div class="label">
-									<h2>Started learning how to program</h2>
-									<span class="more">
-										<p>When &amp; where it all began! I taught myself by reading <i>C: How to Program</i> by Deitel.</p>
-									</span>
-								</div>
-							</li>
-						</ul>
-					</div>
-					<div class="body-text">
-						<p>Like what you see? I'm always looking for <strong>awesome &amp; fun</strong> opportunities. I'd love to hear from
-						you! Hit me up <a href="<%= @nav == 'home' ? '#contact' : '/#contact'%>">here</a>.
-						</p>
-					</div>
-				</section>
-				<section id="content-wrap">
-					<div class="body-text">
-						<p>10 years of hacking and pixel pushing...</p>
-					</div>
-				</section>
+				<%= yield %>
 			</div>
 		</div>
 		<footer>
