--- a/views/blog_post.erb
+++ b/views/blog_post.erb
@@ -1,8 +1,6 @@
-<div id="blog_internal">
-	<div class="header parallax">
-		<h1 class="header">Blog</h1>
-	</div>
-	<div class="content">
-		<%= erb :_post, locals: { post: @post } %>
-	</div>
-</div>
+<section id="content-wrap">
+    <div class="body-text">
+        <%= @post.cache_full ||= format_post @post.content %>
+    </div>
+</section>
+<style><%= @post.cache_css ||= Rouge::Themes::Base16.mode(:light).render(scope: '.highlight') %></style>
