--- a/views/layout.erb
+++ b/views/layout.erb
@@ -65,6 +65,7 @@ var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-4253037-6"]),_gaq.push(["_setDoma
 									<div class="blog-masthead">
 										<div class>
 											<h1 class="animated slideInDown"><%= @post.title %></h1>
+											<h4 class="animated slideInDown"><%= @post.created_at.strftime("%B %d, %Y") %></h4>
 										</div>
 									</div>
 								<% else %>
