--- a/views/main.scss
+++ b/views/main.scss
@@ -237,12 +237,12 @@ footer {
     @include transform(translateY(-50%));
 
 
-    h1 {
+    h1, h4 {
       font-weight: 100;
+    }
 
-      strong {
-        font-weight: 400;
-      }
+    h4 {
+      font-size: 2rem;
     }
   }
 }
