--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,6 +16,7 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" rel="stylesheet" type="text/css"/>
 		<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css">
 		<link rel="stylesheet" type="text/css" href="/css/fluidbox.css">
+		<link rel="stylesheet" type="text/css" href="/css/pushy.css">
 		<link href="/main.css" rel="stylesheet" type="text/css"/>
 		<style type="text/css">
 			.masthead-parallax-img {
@@ -25,6 +26,7 @@
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" defer></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" defer></script>
 		<script src="/js/jquery.fluidbox.min.js" type="text/javascript" charset="utf-8" defer></script>
+		<script src="/js/pushy.js" type="text/javascript" charset="utf-8"></script>
 		<script src="/js/main.js" defer></script>
 	    <script type="text/javascript">
 var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-4253037-6"]),_gaq.push(["_setDomainName","stanleycen.com"]),_gaq.push(["_trackPageview"]),function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src=("https:"==document.location.protocol?"https://ssl":"http://www")+".google-analytics.com/ga.js";var e=document.getElementsByTagName("script")[0];e.parentNode.insertBefore(t,e)}();var _paq=_paq||[];_paq.push(["trackPageView"]),_paq.push(["enableLinkTracking"]),function(){var e="http://lake.stanleycen.com/";_paq.push(["setTrackerUrl",e+"piwik.php"]),_paq.push(["setSiteId",1]);var a=document,p=a.createElement("script"),t=a.getElementsByTagName("script")[0];p.type="text/javascript",p.async=!0,p.defer=!0,p.src=e+"piwik.js",t.parentNode.insertBefore(p,t)}();window.heap=window.heap||[],heap.load=function(t,e){window.heap.appid=t,window.heap.config=e;var a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=("https:"===document.location.protocol?"https:":"http:")+"//cdn.heapanalytics.com/js/heap.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(a,n);for(var o=function(t){return function(){heap.push([t].concat(Array.prototype.slice.call(arguments,0)))}},p=["identify","track"],c=0;c<p.length;c++)heap[p[c]]=o(p[c])}; heap.load("3908329247");
@@ -41,7 +43,7 @@ var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-4253037-6"]),_gaq.push(["_setDoma
 							<ul>
 								<li><a href="<%= @nav == 'home' ? '#about' : '/#about'%>" class="<%= get_nav_classes 'about' %>">about</a></li>
 								<li><a href="<%= nav_url(@nav,'projects') %>" class="<%= get_nav_classes 'projects' %>">projects</a></li>
-								<li><a href="<%= nav_url(@nav,'blog')%>" class="<%= get_nav_classes 'blog' %>">blog</a></li>
+								<li><a href="/blog" class="<%= get_nav_classes 'blog' %>">blog</a></li>
 								<li><a href="<%= @nav == 'home' ? '#contact' : '/#contact'%>" class="<%= get_nav_classes 'contact' %>">contact</a></li>
 								<li><a href="http://github.com/scen/" class="<%= get_nav_classes 'github' %>">github</a></li>
 							</ul>
@@ -69,7 +71,11 @@ var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-4253037-6"]),_gaq.push(["_setDoma
 										</div>
 									</div>
 								<% else %>
-									Ayylmao
+									<div class="blog-masthead">
+										<div class>
+											<h1 class="animated slideInDown">Blog</h1>
+										</div>
+									</div>
 								<% end %>
 							<% end %>
 						</div>
