--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,16 @@
+<section id="masthead">
+	<div class="parallax-wrap">
+		<div class="parallax-img masthead-parallax-img"><div class="darken-filter"></div></div>
+		<div class="parallax-content">
+			<div class="masthead-home-tagline">
+				<div class>
+					<h3 class="animated slideInDown"><em><%= GREETINGS.last %></em> :<span class="paren">)</span></h3>
+					<h1 class="animated slideInDown">I'm <strong>Stanley</strong>, a freshman@mit, intern@dropbox, and builder of things.</h1>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
 <section id="content-wrap">
 	<div class="body-text">
 		<h1>Who am I?</h1>
