--- a/views/blog_post.erb
+++ b/views/blog_post.erb
@@ -1,3 +1,16 @@
+<section id="masthead">
+    <div class="parallax-wrap">
+        <div class="parallax-img masthead-parallax-img"><div class="darken-filter"></div></div>
+        <div class="parallax-content">
+            <div class="blog-masthead">
+                <div class>
+                    <h1 class="animated slideInDown"><%= @post.title %></h1>
+                    <h4 class="animated slideInDown"><%= @post.created_at.strftime("%B %d, %Y") %></h4>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 <section id="content-wrap">
     <div class="body-text">
         <%= @post.cache_full ||= format_post @post.content %>
