--- a/views/layout.erb
+++ b/views/layout.erb
@@ -19,13 +19,9 @@
 		<link href="/main.css" rel="stylesheet" type="text/css"/>
 		<style type="text/css">
 			.masthead-parallax-img {
-				background: url("<%= @header_img %>");
-			}
+                background: url("<%= @header_img %>");
+            }
 		</style>
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-		<script src="/js/jquery.fluidbox.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="/js/main.js"></script>
 	    <script type="text/javascript">
 var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-4253037-6"]),_gaq.push(["_setDomainName","stanleycen.com"]),_gaq.push(["_trackPageview"]),function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src=("https:"==document.location.protocol?"https://ssl":"http://www")+".google-analytics.com/ga.js";var e=document.getElementsByTagName("script")[0];e.parentNode.insertBefore(t,e)}();var _paq=_paq||[];_paq.push(["trackPageView"]),_paq.push(["enableLinkTracking"]),function(){var e="http://lake.stanleycen.com/";_paq.push(["setTrackerUrl",e+"piwik.php"]),_paq.push(["setSiteId",1]);var a=document,p=a.createElement("script"),t=a.getElementsByTagName("script")[0];p.type="text/javascript",p.async=!0,p.defer=!0,p.src=e+"piwik.js",t.parentNode.insertBefore(p,t)}();window.heap=window.heap||[],heap.load=function(t,e){window.heap.appid=t,window.heap.config=e;var a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=("https:"===document.location.protocol?"https:":"http:")+"//cdn.heapanalytics.com/js/heap.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(a,n);for(var o=function(t){return function(){heap.push([t].concat(Array.prototype.slice.call(arguments,0)))}},p=["identify","track"],c=0;c<p.length;c++)heap[p[c]]=o(p[c])}; heap.load("3908329247");
 		</script>
@@ -35,43 +31,12 @@ var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-4253037-6"]),_gaq.push(["_setDoma
 		<div id="container">
 			<div id="page">
 				<div class="rel">
-					<header id="header">
+					<header id="header" class='maybe-hide-masthead'>
 						<a class="navicon-button"><div class="navicon"></div></a>
 						<div class="name"><a href="/"><h1>stanley</h1><h2>cen</h2></a></div>
 						<%= erb :nav %>
 					</header>
 				</div>
-				<section id="masthead">
-					<div class="parallax-wrap">
-						<div class="parallax-img masthead-parallax-img"><div class="darken-filter"></div></div>
-						<div class="parallax-content">
-							<% case @nav
-							   when 'home' %>
-								<div class="masthead-home-tagline">
-									<div class>
-										<h3 class="animated slideInDown"><em><%= GREETINGS.last %></em> :<span class="paren">)</span></h3>
-										<h1 class="animated slideInDown">I'm <strong>Stanley</strong>, a freshman@mit, intern@dropbox, and builder of things.</h1>
-									</div>
-								</div>
-							<% when 'blog' %>
-								<% if @post # if we're browsing to a specific post %>
-									<div class="blog-masthead">
-										<div class>
-											<h1 class="animated slideInDown"><%= @post.title %></h1>
-											<h4 class="animated slideInDown"><%= @post.created_at.strftime("%B %d, %Y") %></h4>
-										</div>
-									</div>
-								<% else %>
-									<div class="blog-masthead">
-										<div class>
-											<h1 class="animated slideInDown">Blog</h1>
-										</div>
-									</div>
-								<% end %>
-							<% end %>
-						</div>
-					</div>
-				</section>
 				<%= yield %>
 			</div>
 		</div>
@@ -87,5 +52,10 @@ var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-4253037-6"]),_gaq.push(["_setDoma
 				</div>
 			</div>
 		</footer>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+		<script src="/js/jquery.fluidbox.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/js/masonry.pkgd.min.js" type="text/javascript"></script>
+		<script src="/js/main.js"></script>
 	</body>
 </html>
