--- a/views/mixins.scss
+++ b/views/mixins.scss
@@ -46,3 +46,9 @@
       -ms-border-radius: $radius;
           border-radius: $radius;
 }
+
+@mixin box-shadow($top, $left, $blur, $spread, $color) {
+    -webkit-box-shadow: $top $left $blur $spread $color;
+    -moz-box-shadow: $top $left $blur $spread $color;
+    box-shadow: $top $left $blur $spread $color;
+}
